# zed-laravel-extension

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  extension.toml  package-lock.json  package.json  skills-lock.json  test-lsp.js  test.js
.agents/: blade-git.md  blade-implementer.md  blade-performance.md  blade-qa.md
.agents/skills/agent-builder/: EXAMPLES.md  SKILL.md
.agents/skills/creating-agent-skills/: SKILL.md
.agents/skills/creating-agents-md/: SKILL.md
.agents/skills/creating-zed-extensions/: SKILL.md
.agents/skills/documentation-standards/: SKILL.md
.agents/skills/github-actions-testing/: SKILL.md
.agents/skills/self-improving/: SKILL.md
.claude/skills/: agent-builder  creating-agent-skills  creating-agents-md  creating-zed-extensions  documentation-standards  github-actions-testing  self-improving
laravel-docs/: blade.md
lsp/: server.js  view-lsp.js
lsp/blade/: completions.js  components.js  data.js  views.js
lsp/php/: artisan-routes.js  completions.js  config.js  data.js  definition.js  discovery.js  env.js  inference.js  models.js  prefetch.js  resolver.js  routes.js  vendor.js
scripts/: bundle-parser.js
src/: lib.rs
