[package]
name = "zed-laravel"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "Complete Laravel framework support for Zed Editor"
repository = "https://github.com/hotdogb/zed-laravel"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
